:bug: Fixed Dark Mode
:art: Applied Filters to Background Images to match Dark Mode
:recycle: Updated Styles to match Dark Mode on all Pages
:lipstick: Changed Heading Text Color for Dark Mode - Can be changed in styles.css

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -84,6 +84,10 @@
 	color: #1a2a6c;
 }
 
+.dark_view_title {
+	color: white;
+}
+
 .view_line {
 	max-width: 120px;
 	border-width: 0.6px;
@@ -110,7 +114,7 @@
 
 .vertical-timeline-technojam h5 {
 	font-size: 1.5rem;
-	font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 	font-weight: 400;
 	line-height: 1.33;
 }
